# Top-Level CmakeLists
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/")

PROJECT(WSIM)


# Compiler flags
IF(CMAKE_COMPILER_IS_GNUCC)
	SET(CMAKE_CXX_FLAGS "-g") # debug
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra") # warnings
ENDIF()


ADD_SUBDIRECTORY(doc)

